--- a/FYP Presentation/Readme
+++ b/FYP Presentation/Readme
@@ -1,1 +1,1 @@
-
+First of all we defend our proposal of fyp.Then we give 1st presentation, which we are delivers in front of the teachers. Teachers are evaluating our fyp work.
